--- a/CSS/transition/transform/style.css
+++ b/CSS/transition/transform/style.css
@@ -149,3 +149,28 @@ h1:hover {
     transform: rotateZ(90deg);
   }
 }
+
+
+
+.red
+{
+  color: red;
+}
+.green{
+  color: green;
+}
+.blue{
+  color: blue;
+}
+.bg-pink{
+background-color: pink;
+}
+.bg-violet{
+  background-color: violet;
+}
+.bg-green{
+  background-color: greenyellow;
+}
+.bg-blue{
+  background-color: skyblue;
+}
